[tool.poetry]
name = "cloud-firewall"
version = "0.1.0"
description = ""
authors = ["Afonso Caboz <afonso.caboz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scapy = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
